Add QueryParamExtractorTest to cover invalid URL scenario
- Implemented a test for the QueryParamExtractor to assert that an IllegalArgumentException is thrown when an invalid URL is provided.
- Updated QueryParamExtractor to throw IllegalArgumentException on URI parsing failures.
- Modified AudioGenerationFacade and UrlExtractorService to properly handle and rethrow URISyntaxException.